2011-05-27 13:53  David Chisnall <theraven@gna.org>

	* libs/back/trunk/Source/x11/XGServerWindow.m: Call NSZoneFree() on
	  pointer allocated with NSAllocateCollectable(), not free(). This
	  is a no-op in GC mode, and will free the memory in non-GC mode.

2011-05-25  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/winlib/WIN32GState.m:
	* Source/art/ARTGState.m:
	* Source/cairo/CairoGState.m:
	* Source/xlib/XGGState.m:
	* Source/gsc/GSContext.m:
	* Source/gsc/GSGState.m:
	* Headers/gsc/GSGStateOps.h:
	Add a new interface, GSShowGlyphsWithAdvances, which replaces
	GSShowGlyphs as the primitive text drawing method.

	None of the backends implement it properly yet; I simply renamed
	the existing -GSShowGlyphs:: methods to -GSShowGlyphsWithAdvances:::,
	so they currently ignore the glyph advances.

2011-05-19 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoFontEnumerator.h,
	* Headers/cairo/CairoFaceInfo.h: Protect the name id.
	* Source/cairo/CairoGState.m: Reorder variable declarations before
	GS_BEGINITEMBUF as some compilers may complain.
	Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

2011-05-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/XGServerWindow.m:
	* Source/x11/XGServer.m:
	* Source/x11/XGServerEvent.m:
	* Headers/x11/XGGeneric.h:
	* Headers/x11/XGServerWindow.h:
	* Headers/x11/XGServer.h:
	Implement the _NET_WM_SYNC_REQUEST protocol described here:
	http://standards.freedesktop.org/wm-spec/1.3/ar01s06.html

	This is supposed to make window resizing smoother when dragging
	a resize handle provided by the window manager, by waiting to
	change the window manager's frame until the GNUstep window is
	finished repainting.

2011-05-05  Eric Wasylishen  <ewasylishen@gmail.com>

	* Undo the previous change and try a different approach..
	just cache the character set in CairoFaceInfo, but load them
	as needed as we were doing before.

2011-05-05  Eric Wasylishen  <ewasylishen@gmail.com>
